apps/base/metamcp/metamcp.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metamcp-service
  namespace: metamcp-system
spec:
  selector:
    app: metamcp
  ports:
    - name: http
      protocal: TCP
      port: 80
      targetPort: 5230
    - name: https
      protocol: TCP
      port: 443
      targetPort: 5230
  type: ClusterIP
