apps/base/metamcp/metamcp.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metamcp-ingress
  namespace: metamcp-system
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: mcp.tinyrack.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: metamcp-service
                port:
                  name: http

  tls:
    - hosts:
        - "mcp.tinyrack.net"
      secretName: letsencrypt-wildcard-cert-tinyrack.net
